--- a/references.bib
+++ b/references.bib
@@ -54,3 +54,308 @@
   title  = {Overseas Arrivals and Departures, Australia},
   url    = {https://www.abs.gov.au/statistics/industry/tourism-and-transport/overseas-arrivals-and-departures-australia/oct-2023}
 }
+
+@article{truong2020selective,
+  title={Selective review of offline change point detection methods},
+  author={Truong, Charles and Oudre, Laurent and Vayatis, Nicolas},
+  journal={Signal Processing},
+  volume={167},
+  pages={107299},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{blazquez2021review,
+  title={A review on outlier/anomaly detection in time series data},
+  author={Bl{\'a}zquez-Garc{\'\i}a, Ane and Conde, Angel and Mori, Usue and Lozano, Jose A},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={54},
+  number={3},
+  pages={1--33},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{talagala2020anomaly,
+  title={Anomaly detection in streaming nonstationary temporal data},
+  author={Talagala, Priyanga Dilini and Hyndman, Rob J and Smith-Miles, Kate and Kandanaarachchi, Sevvandi and Munoz, Mario A},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={29},
+  number={1},
+  pages={13--27},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@book{mcdowall2019interrupted,
+  title={Interrupted time series analysis},
+  author={McDowall, David and McCleary, Richard and Bartos, Bradley J},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{box1975intervention,
+  title={Intervention analysis with applications to economic and environmental problems},
+  author={Box, George EP and Tiao, George C},
+  journal={Journal of the American Statistical association},
+  volume={70},
+  number={349},
+  pages={70--79},
+  year={1975},
+  publisher={Taylor \& Francis}
+}
+
+@article{bernal2017interrupted,
+  title={Interrupted time series regression for the evaluation of public health interventions: a tutorial},
+  author={Bernal, James Lopez and Cummins, Steven and Gasparrini, Antonio},
+  journal={International journal of epidemiology},
+  volume={46},
+  number={1},
+  pages={348--355},
+  year={2017},
+  publisher={Oxford University Press}
+}
+
+@article{coopersmith1983forecasting,
+  title={Forecasting time series which are inherently discontinuous},
+  author={Coopersmith, Lewis W},
+  journal={Journal of Forecasting},
+  volume={2},
+  number={3},
+  pages={225--235},
+  year={1983},
+  publisher={Wiley Online Library}
+}
+
+@article{Bell2000,
+author = {P C Bell},
+title = {Forecasting demand variation when there are stockouts},
+journal = {Journal of the Operational Research Society},
+volume = {51},
+number = {3},
+pages = {358-363},
+year = {2000},
+publisher = {Taylor & Francis}
+}
+
+@article{trapero2023demand,
+  title={Demand forecasting under lost sales stock policies},
+  author={Trapero, Juan R and de Frutos, Enrique Holgado and Pedregal, Diego J},
+  journal={International Journal of Forecasting},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{fildes2008forecasting,
+  title={Forecasting and operational research: a review},
+  author={Fildes, Robert and Nikolopoulos, Konstantinos and Crone, Sven F and Syntetos, Aris A},
+  journal={Journal of the Operational Research Society},
+  volume={59},
+  pages={1150--1172},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{turner2021comparison,
+  title={Comparison of six statistical methods for interrupted time series studies: empirical evaluation of 190 published series},
+  author={Turner, Simon L and Karahalios, Amalia and Forbes, Andrew B and Taljaard, Monica and Grimshaw, Jeremy M and McKenzie, Joanne E},
+  journal={BMC Medical Research Methodology},
+  volume={21},
+  number={1},
+  pages={1--19},
+  year={2021},
+  publisher={BioMed Central}
+}
+
+@article{blazquez2021review,
+  title={A review on outlier/anomaly detection in time series data},
+  author={Bl{\'a}zquez-Garc{\'\i}a, Ane and Conde, Angel and Mori, Usue and Lozano, Jose A},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={54},
+  number={3},
+  pages={1--33},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{taylor2018forecasting,
+  title={Forecasting at scale},
+  author={Taylor, Sean J and Letham, Benjamin},
+  journal={The American Statistician},
+  volume={72},
+  number={1},
+  pages={37--45},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+@article{dehning2020inferring,
+  title={Inferring change points in the spread of COVID-19 reveals the effectiveness of interventions},
+  author={Dehning, Jonas and Zierenberg, Johannes and Spitzner, F Paul and Wibral, Michael and Neto, Joao Pinheiro and Wilczek, Michael and Priesemann, Viola},
+  journal={Science},
+  volume={369},
+  number={6500},
+  pages={eabb9789},
+  year={2020},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{aue2013structural,
+  title={Structural breaks in time series},
+  author={Aue, Alexander and Horv{\'a}th, Lajos},
+  journal={Journal of Time Series Analysis},
+  volume={34},
+  number={1},
+  pages={1--16},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{aminikhanghahi2017survey,
+  title={A survey of methods for time series change point detection},
+  author={Aminikhanghahi, Samaneh and Cook, Diane J},
+  journal={Knowledge and information systems},
+  volume={51},
+  number={2},
+  pages={339--367},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{barry1993bayesian,
+  title={A Bayesian analysis for change point problems},
+  author={Barry, Daniel and Hartigan, John A},
+  journal={Journal of the American Statistical Association},
+  volume={88},
+  number={421},
+  pages={309--319},
+  year={1993},
+  publisher={Taylor \& Francis}
+}
+
+@article{athanasopoulos2023probabilistic,
+  title={Probabilistic forecasts using expert judgment: The road to recovery from COVID-19},
+  author={Athanasopoulos, George and Hyndman, Rob J and Kourentzes, Nikolaos and O’Hara-Wild, Mitchell},
+  journal={Journal of Travel Research},
+  volume={62},
+  number={1},
+  pages={233--258},
+  year={2023},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+
+@article{Koopg2007,
+    author = {Koop, Gary and Potter, Simon M.},
+    title = "{Estimation and Forecasting in Models with Multiple Breaks}",
+    journal = {The Review of Economic Studies},
+    volume = {74},
+    number = {3},
+    pages = {763-789},
+    year = {2007}
+}
+
+@article{hyndman2002state,
+  title={A state space framework for automatic forecasting using exponential smoothing methods},
+  author={Hyndman, Rob J and Koehler, Anne B and Snyder, Ralph D and Grose, Simone},
+  journal={International Journal of forecasting},
+  volume={18},
+  number={3},
+  pages={439--454},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{gardner2006exponential,
+  title={Exponential smoothing: The state of the art—Part II},
+  author={Gardner Jr, Everette S},
+  journal={International journal of forecasting},
+  volume={22},
+  number={4},
+  pages={637--666},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{harvey2006forecasting,
+  title={Forecasting with unobserved components time series models},
+  author={Harvey, Andrew},
+  journal={Handbook of economic forecasting},
+  volume={1},
+  pages={327--412},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{talih2005structural,
+  title={Structural learning with time-varying components: tracking the cross-section of financial time series},
+  author={Talih, Makram and Hengartner, Nicolas},
+  journal={Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume={67},
+  number={3},
+  pages={321--341},
+  year={2005},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{khoshgoftaar2007empirical,
+  title={An empirical study of learning from imbalanced data using random forest},
+  author={Khoshgoftaar, Taghi M and Golawala, Moiz and Van Hulse, Jason},
+  booktitle={19th IEEE International Conference on Tools with Artificial Intelligence (ICTAI 2007)},
+  volume={2},
+  pages={310--317},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{tang2020joint,
+  title={Joint modeling of local and global temporal dynamics for multivariate time series forecasting with missing values},
+  author={Tang, Xianfeng and Yao, Huaxiu and Sun, Yiwei and Aggarwal, Charu and Mitra, Prasenjit and Wang, Suhang},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={34},
+  number={04},
+  pages={5956--5963},
+  year={2020}
+}
+
+@article{twala2008good,
+  title={Good methods for coping with missing data in decision trees},
+  author={Twala, Bheki ETH and Jones, MC and Hand, David J},
+  journal={Pattern Recognition Letters},
+  volume={29},
+  number={7},
+  pages={950--956},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@INPROCEEDINGS{7157837,
+  author={Shin-Fu Wu and Chia-Yung Chang and Shie-Jue Lee},
+  booktitle={2015 1st International Conference on Industrial Networks and Intelligent Systems (INISCom)}, 
+  title={Time series forecasting with missing values}, 
+  year={2015},
+  volume={},
+  number={},
+  pages={151-156},
+  keywords={Linear systems;Time series prediction;missing values;local time index;least squares support vector machine (LSSVM)},
+  doi={10.4108/icst.iniscom.2015.258269}}
+
+@book{mcdowall2019interrupted,
+  title={Interrupted time series analysis},
+  author={McDowall, David and McCleary, Richard and Bartos, Bradley J},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{targetsr2021,
+    title = {The targets R package: a dynamic Make-like
+      function-oriented pipeline toolkit for reproducibility and
+      high-performance computing},
+    author = {William Michael Landau},
+    journal = {Journal of Open Source Software},
+    year = {2021},
+    volume = {6},
+    number = {57},
+    pages = {2959},
+    url = {https://doi.org/10.21105/joss.02959},
+}
