--- a/fits.qmd
+++ b/fits.qmd
@@ -1,44 +1,33 @@
 ---
 title: "Forecasting interrupted time series"
 author:
-- familyname: Hyndman
-  othernames: Rob J
-  address:
-    - Department of Econometrics & Business Statistics
-    - Monash University
-    - Clayton VIC 3800
-    - Australia
+- name: Rob J Hyndman
+  affiliations:
+    - department: Department of Econometrics & Business Statistics
+    - name: Monash University
+    - city: Clayton VIC
+    - country: Australia
+    - postal-code: 3800
   email: Rob.Hyndman@monash.edu
-  correspondingauthor: true
-- familyname: Rostami-Tabar
-  othernames: Bahman
-  address:
-    - Cardiff Business School
-    - Wales CF10 3EU
-    - United Kingdom
+  corresponding: true
+- name: Bahman Rostami-Tabar
+  affiliations:
+    - name: Cardiff Business School
+    - postal-code: Wales CF10 3EU
+    - country: United Kingdom
   email: rostami-tabarb@cardiff.ac.uk
 abstract: "Forecasting interrupted time series data is a major challenge for forecasting teams, especially in light of events such as the COVID-19 pandemic. This paper investigates several strategies for dealing with interruptions in time series forecasting, including highly adaptable models, intervention models, marking interrupted periods as missing, forecasting what may have been, downweighting the interruption period, and ensemble models.  Each approach offers specific advantages and disadvantages, such as adaptability, memory retention, data integrity, flexibility, and accuracy. We evaluate the effectiveness of these strategies using two actual datasets that were interrupted by COVID-19, and we provide recommendations for how to handle these interruptions. This work contributes to the literature on time series forecasting, offering insights for academics and practitioners dealing with interrupted data in numerous domains."
 keywords: "Forecasting, interrupted time series, disruptive events, COVID-19"
+bibliography: references.bib
 wpnumber: no/yr
 jelcodes: C10,C14,C22
 blind: false
 cover: false
-toc: false
-bibliography: references.bib
-biblio-style: authoryear-comp
+linestretch: 1.5
 format:
   wp-pdf:
     include-in-header: header.tex
-cite-method: biblatex
-number-sections: true
-keep-tex: true
-fig-height: 5
-fig-width: 8
-execute:
-  echo: false
-  warning: false
-  message: false
-  cache: false
+    keep-tex: true
 ---
 
 ```{r}
